Update signup page

--- a/src/Styles/MainPage.module.css
+++ b/src/Styles/MainPage.module.css
@@ -1,8 +1,11 @@
 .backBtn{
-    left: 15%;
+    left: 20%;
     margin: 3% 0;
+    position: relative;
 }
 
 .mainPage{
     background: linear-gradient(135deg, #fdfaf2 0%, #e9f7f3 50%, #edf5fb 100%);
+    font-family: "Outfit", sans-serif;
+    padding: 0  0% 5%;
 }
