--- a/src/Styles/Gender.module.css
+++ b/src/Styles/Gender.module.css
@@ -1,5 +1,19 @@
+.dobContainer, .genderContainer{
+  position: relative;
+  width: 100%;
+}
+
 .dobInput{
   width: calc(100% - 2.5rem - 20px);
+}
+
+.dobInput, .genderInput{
+  background-color: transparent;
+  border: 1px solid #34343C;
+  border-radius: 40px;
+  font-size: 1rem;
+  margin-bottom: 1.5rem;
+  padding: 20px 20px 20px 2.5rem;
 }
 
 .dropdownIcon {
@@ -13,10 +27,15 @@
 
 .gender{
   background-color: #fff;
+  border-radius: 20px;
   margin: auto;
-  padding: 5%;
+  padding: 2% 0;
   text-align: center;
   width: 60%;
+}
+
+.gender h3{
+  font-size: 32px;
 }
 
 .genderBtn {
@@ -26,20 +45,15 @@
   cursor: pointer;
   display: block;
   font-size: 1rem;
+  font-weight: medium;
   margin-top: 1rem;
   padding: 1rem;
   width: 100%;
 }
 
-.genderContainer,
-.dobContainer {
-  position: relative;
-  width: 100%;
-}
-
 .genderForm {
   margin: 2rem auto;
-  width: 100%;
+  width: 80%;
 }
 
 .genderFormCont {
@@ -58,16 +72,6 @@
 
 .genderInput{
   width: 100%;
-}
-
-.genderInput,
-.dobInput {
-  background-color: transparent;
-  border: 1px solid #34343C;
-  border-radius: 40px;
-  font-size: 1rem;
-  margin-bottom: 1.5rem;
-  padding: 20px 20px 20px 2.5rem;
 }
 
 input::placeholder {
