--- a/src/Styles/info.module.css
+++ b/src/Styles/info.module.css
@@ -10,7 +10,7 @@
 .info{
     background-color: #fff;
     margin: auto;
-    padding: 5%;
+    padding: 2% 0;
     text-align: center;
     width: 60%;
 }
@@ -28,7 +28,8 @@
 }
 
 .infoForm{
-    margin: auto;
+    margin: 2rem auto;
+    width: 80%;
 }
 
 .infoInput{
