--- a/src/Styles/Bvn.module.css
+++ b/src/Styles/Bvn.module.css
@@ -9,18 +9,29 @@
   padding: 1rem;
 }
 
-button:hover {
-  background-color: #000;
-}
-
 .bvnContainer {
   background-color: #fff;
-    margin: 50px auto;
-    padding: 5%;
-    text-align: center;
-    font-family: 'Segoe UI', sans-serif;
-    width: 60%;
+  border-radius: 20px;
+  margin: auto;
+  padding: 2% 0;
+  text-align: center;
+  width: 60%;
 }
+
+.bvnForm{
+  margin: 2rem auto;
+  width: 80%;
+}
+
+.bvnInput {
+  background-color: transparent;
+  border: 1px solid #34343C;
+  border-radius: 40px;
+  font-size: 1rem;
+  margin-bottom: 1.5rem;
+  padding: 20px 20px 20px 2.5rem;
+  width: calc(100% - 2.5rem - 20px);
+} 
   
 .header h2 {
     margin-bottom: 8px;
@@ -51,16 +62,3 @@ button:hover {
   cursor: pointer;
   text-align: right;
 }
-  
-.inputGroup {
-    margin-bottom: 10px;
-}
-  
-.bvnInput {
-    width: 100%;
-    padding: 12px;
-    border-radius: 999px;
-    border: 1px solid #ccc;
-    font-size: 0.95rem;
-    outline: none;
-} 
