--- a/src/Styles/Bvn.module.css
+++ b/src/Styles/Bvn.module.css
@@ -13,6 +13,7 @@
   background-color: #fff;
   border-radius: 20px;
   margin: auto;
+  margin-bottom: 20px;
   padding: 2% 0;
   text-align: center;
   width: 60%;
