--- a/src/Styles/Gender.module.css
+++ b/src/Styles/Gender.module.css
@@ -29,6 +29,7 @@
   background-color: #fff;
   border-radius: 20px;
   margin: auto;
+  margin-bottom: 20px;
   padding: 2% 0;
   text-align: center;
   width: 60%;
