--- a/src/Styles/info.module.css
+++ b/src/Styles/info.module.css
@@ -9,7 +9,9 @@
 
 .info{
     background-color: #fff;
+    border-radius: 20px;
     margin: auto;
+    margin-bottom: 20px;
     padding: 2% 0;
     text-align: center;
     width: 60%;
