--- a/src/Styles/poAddress.module.css
+++ b/src/Styles/poAddress.module.css
@@ -10,7 +10,7 @@
   .proof{
     background-color: #fff;
     margin: auto;
-    padding: 5%;
+    padding: 2% 0;
     text-align: center;
     width: 60%;
   }
@@ -81,7 +81,7 @@
   
   .proofForm {
     margin: 2rem auto;
-    width: 100%;
+    width: 80%;
   }
   
   .proofFormWrapper {
