--- a/src/Styles/poi.module.css
+++ b/src/Styles/poi.module.css
@@ -9,8 +9,10 @@
 
 .proof{
   background-color: #fff;
+  border-radius: 20px;
   margin: auto;
-  padding: 5%;
+  margin-bottom: 20px;
+  padding: 2% 0;
   text-align: center;
   width: 60%;
 }
@@ -81,7 +83,7 @@ input::placeholder {
 
 .proofForm {
   margin: 2rem auto;
-  width: 100%;
+  width: 80%;
 }
 
 .proofFormWrapper {
