--- a/src/Styles/Gender.module.css
+++ b/src/Styles/Gender.module.css
@@ -78,3 +78,13 @@
 input::placeholder {
   color: #1e272F;
 }
+
+@media screen and (max-width: 600px) {
+  .gender{
+    width: 95%;
+  }
+
+  .genderForm{
+    width: 95%;
+  }
+}
