--- a/src/Styles/SignUp.module.css
+++ b/src/Styles/SignUp.module.css
@@ -145,3 +145,17 @@ input::placeholder {
 .terms p span{
   color: #366CBD;
 }
+
+@media screen and (max-width: 600px) {
+  .signup{
+    width: 95%;
+  }
+
+  .signupForm{
+    width: 95%;
+  }
+
+  .socialBtn {
+    font-size: 15px;
+  }  
+}
