--- a/src/Styles/info.module.css
+++ b/src/Styles/info.module.css
@@ -69,4 +69,14 @@
     border-left: 1px solid #000;
     font-size: 0.95rem;
     outline: none;
-}  
+} 
+
+@media screen and (max-width: 600px) {
+    .info{
+      width: 95%;
+    }
+
+    .infoForm{
+        width: 95%;
+    }
+  }
