--- a/src/Styles/poAddress.module.css
+++ b/src/Styles/poAddress.module.css
@@ -87,4 +87,21 @@
   .proofFormWrapper {
     text-align: center;
     padding: 2rem 1rem;
-  }
+}
+
+.skip {
+  color: #B3B3B3;
+  cursor: pointer;
+  text-align: right;
+}
+
+@media screen and (max-width: 600px) {
+    .proof{
+      width: 95%;
+    }
+
+    .proofForm{
+        width: 95%;
+    }
+
+}
