--- a/src/Styles/verifyEmail.module.css
+++ b/src/Styles/verifyEmail.module.css
@@ -53,3 +53,13 @@
     padding: 1rem;
     width: 100%;
 }
+
+@media screen and (max-width: 600px) {
+    .otpInput{
+        width: 20px;
+    }
+
+    .verify{
+      width: 95%;
+    }
+  }
